<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GitUserDetailActivity"
    android:id="@+id/detail_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="360dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/avatarbackground" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewUser"
                android:layout_width="185dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="170dp"
                android:drawableStart="@drawable/user_image_test"
                android:drawablePadding="4dp"
                android:padding="12dip"
                tools:src="@drawable/user_image_test" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:backgroundTint="@color/colorBlue"/>

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:text="@string/username_user"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewNameUser"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name_user"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewRepository"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/repository_user"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewLocationUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="30dp"
                android:drawablePadding="5dp"
                android:text="@string/location_user"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/location_icon" />

            <TextView
                android:id="@+id/textViewCompanyUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:text="@string/company_user"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/company_icon" />

        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="320dp" />

    </LinearLayout>

</ScrollView>